--- a/frontend/src/style/app.css
+++ b/frontend/src/style/app.css
@@ -33,7 +33,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: absolute;
+  position: fixed;
   bottom: 40px;
   right: 40px;
 }
